# xecs

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  Main.cpp  README.md  TODO  TODO.md
.github/workflows/: build.yml  coverage.yml
bench/: CMakeLists.txt  benchmark.cpp  benchmark.h  benchmark.hpp
cmake/: CompilerOptions.cmake  PreventInSourceBuilds.cmake
single/: xecs.hpp
src/: archetype.hpp  container.hpp  context.hpp  ecs.hpp  entity_manager.hpp  meta.hpp  registry.hpp  storage.hpp  type_map.hpp  xecs.hpp
test/: CMakeLists.txt  archetype_tests.cpp  benchmark.cpp  container_tests.cpp  context_tests.cpp  entity_manager_tests.cpp  registry_tests.cpp  storage_tests.cpp  type_map_tests.cpp
